fix(alignment): aligned rec resource page elements with header and nav

--- a/frontend/src/components/rec-resource/RecResource.scss
+++ b/frontend/src/components/rec-resource/RecResource.scss
@@ -22,7 +22,7 @@
 }
 
 .bg-container {
-  width: 100vw;
+  width: 100%;
   background: $colorBrownLight;
 }
 
